# claude-force

./: .bumpversion.cfg  .gitignore  ACTION_PLAN.md  ARCHITECTURE.md  BUILD_DOCUMENTATION.md  CHANGELOG.md  CLAUDE_CODE_ANALYSIS.md  CODE_REVIEW_EXISTING_PROJECT_SUPPORT.md  CODE_REVIEW_FIXES.md  COMPREHENSIVE_REVIEW.md  CONTRIBUTING.md  EXISTING_PROJECT_SUPPORT.md  FAQ.md  HOTFIX_PR_DESCRIPTION.md  IMPROVEMENTS.md  INSTALLATION.md  ISSUES.md  LAUNCH_CHECKLIST.md  MANIFEST.in  MULTI_PERSPECTIVE_REVIEW.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PROJECT_OVERVIEW.md  PR_DESCRIPTION.md  PR_DESCRIPTION_N8N.md  PR_INSTRUCTIONS.md  PR_SUMMARY_N8N.md  PULL_REQUEST.md  QUICK_START.md  README.md  RELEASE_TEST_REPORT_v1.2.0.md  REMAINING_ISSUES.md  REVIEW_COMMAND_IMPLEMENTATION.md  REVIEW_SUMMARY.md  SECURITY_IMPLEMENTATION.md  SESSION_PROGRESS.md  TDD_IMPLEMENTATION.md  cliff.toml  pyproject.toml  requirements.txt  setup.py  (+1 more)
.claude/: AGENT_SKILLS_MATRIX.md  README.md  claude.json  task.md  workflows.md
benchmarks/: README.md
claude_force/: __init__.py  __main__.py  agent_memory.py  agent_router.py  analytics.py  async_orchestrator.py  base.py  cli.py  constants.py  contribution.py  demo_mode.py  diagnostics.py  error_helpers.py  hybrid_orchestrator.py  import_export.py  interactive_shell.py  logging_config.yaml  logging_setup.py  marketplace.py  mcp_server.py  orchestrator.py  path_validator.py  performance_tracker.py  quick_start.py  response_cache.py  semantic_selector.py  skills_manager.py  template_gallery.py  workflow_composer.py
docs/: CI_CD_INTEGRATION.md  SECURITY.md  conf.py  n8n-video-automation-development-plan.md  n8n-video-automation-diagrams.md  n8n-video-automation-expert-reviews.md  n8n-video-automation-guide.md
scripts/: check_version_consistency.py  get_expert_reviews.py  pre_release_checklist.py  profile_performance.py  review_implementation.py  run_e2e_tests.py  run_e2e_tests.sh  test_critical_fixes.py
tests/: cli_test_framework.py  test_agent_definition_caching.py  test_agent_router.py  test_analytics.py  test_async_orchestrator.py  test_cli_framework_examples.py  test_cli_integration.py  test_contribution.py  test_demo_mode.py  test_error_handling.py  (+22 more)
(+166 files in other folders)
